--- a/src/Pages/TransactionsPage/transactions-page-styles.css
+++ b/src/Pages/TransactionsPage/transactions-page-styles.css
@@ -28,5 +28,34 @@
     transition: border-bottom .1s linear, opacity .1s linear;
 }
 
+.flex{
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    border-bottom: 1px solid black;
+}
+
+.flex .item{
+    display: flex;
+    align-items: center;
+}
+
+.flex .info{
+    padding-left: 1em;
+ }
+
+.msg{
+    text-indent: 2pc;
+}
+
+.plus{
+    color: green;
+}
+
+.minus{
+    color: red;
+}
+
+
 
 
